# CSE135_HW1

./: .gitignore  README.md  htmlmain.css  index.html  new404.html
.github/workflows/: deploy.yml
apache2/: .htpasswd  apache2.conf
apache2/conf-enabled/: security.conf  serve-cgi-bin.conf
apache2/mods-enabled/: deflate.conf
apache2/sites-available/: 000-default.conf  collector-le-ssl.conf  collector.conf  cse151group111.online-le-ssl.conf  cse151group111.online.conf  matomo-le-ssl.conf  package-lock.json  package.json
apache2/sites-enabled/: 000-default-le-ssl.conf  matomo.conf  reporting-le-ssl.conf  reporting.conf
cgi-bin/C/: c-destroy-session.c  c-hello-html-world.c  c-hello-json-world.cgi  c-sessions-1.c  c-state-demo.c  c-state-demo.cgi
cgi-bin/PHP/: php-destroy-session.php  php-get-echo.php  php-post-echo.php  php-sessions-1.php  php-sessions-2.php  php-state-demo.php
cgi-bin/Perl/: perl-destroy-session.pl  perl-hello-html-world.pl  perl-sessions-1.pl
cgi-bin/Python/: python-destroy-session.py  python-get-echo.py  python-post-echo.py  python-sessions-1.py
cgi-bin/Ruby/: ruby-destroy-session.rb  ruby-environment.rb  ruby-general-request-echo.rb  ruby-get-echo.rb  ruby-hello-html-world.rb  ruby-hello-json-world.rb  ruby-post-echo.rb  ruby-sessions-1.rb  ruby-sessions-2.rb  ruby-state-demo.rb
cgi-bin/go/: go-env.go  go-general-echo  go-get-echo  go-get-echo.go  go-hello-html-world  go-hello-json-world  go-post-echo  (+5 more)
cgi-bin/rust/: Cargo.toml
cgi-bin/rust/src/: rust-destroy-session.rs  rust-sessions-1.rs
hw1/: report.html
members/: bill.html
(+106 files in other folders)
